syntax = "proto3";

message CurrentWorkspace {
    string workspace_id = 1;
}
