syntax = "proto3";
import "app_create.proto";

message CreateWorkspaceRequest {
    string name = 1;
    string desc = 2;
}
message CreateWorkspaceParams {
    string name = 1;
    string desc = 2;
}
message Workspace {
    string id = 1;
    string name = 2;
    string desc = 3;
    RepeatedApp apps = 4;
    int64 modified_time = 5;
    int64 create_time = 6;
}
message RepeatedWorkspace {
    repeated Workspace items = 1;
}
